version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/ACT/Automation/Mechanical/BoundaryConditions/Moment.rst.txt
.. vale off



:class:`Moment`
===============

.. py:class:: ansys.mechanical.stubs.v242.Ansys.ACT.Automation.Mechanical.BoundaryConditions.Moment(internalObject: Any)
              Moment(info: System.Runtime.Serialization.SerializationInfo, context: System.Runtime.Serialization.StreamingContext)

   Bases: :py:obj:`object`


   
   Defines a Moment.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: Moment

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Activate`
            - Activate the current object.
          * - :py:attr:`~AddComment`
            - Creates a new child Comment.
          * - :py:attr:`~AddFigure`
            - Creates a new child Figure.
          * - :py:attr:`~AddImage`
            - Creates a new child Image.
          * - :py:attr:`~CopyTo`
            - Copies all visible properties from this object to another.
          * - :py:attr:`~CreateObjRef`
            - CreateObjRef method.
          * - :py:attr:`~CreateParameter`
            - Creates a new parameter for a Property.
          * - :py:attr:`~Delete`
            - Run the Delete action.
          * - :py:attr:`~Duplicate`
            - Creates a copy of the current DataModelObject.
          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetAPIName`
            - Property name bound to dispId.
          * - :py:attr:`~GetActivateAtLoadStep`
            - GetActivateAtLoadStep method.
          * - :py:attr:`~GetAllProperties`
            - GetAllProperties method.
          * - :py:attr:`~GetChildren`
            - Gets the list of children, filtered by type.
          * - :py:attr:`~GetComponentActivateAtLoadStep`
            - GetComponentActivateAtLoadStep method.
          * - :py:attr:`~GetEnumName`
            - Enum name bound to value
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetIconFile`
            - GetIconFile method.
          * - :py:attr:`~GetLifetimeService`
            - GetLifetimeService method.
          * - :py:attr:`~GetObjectData`
            - GetObjectData method.
          * - :py:attr:`~GetParameter`
            - Gets the parameter corresponding to the given property.
          * - :py:attr:`~GetPath`
            - GetPath method.
          * - :py:attr:`~GetPropertyName`
            - GetPropertyName method.
          * - :py:attr:`~GetPropertyValue`
            - GetPropertyValue method.
          * - :py:attr:`~GetVisibleProperties`
            - GetVisibleProperties method.
          * - :py:attr:`~GetVisiblePropertyNames`
            - GetVisiblePropertyNames method.
          * - :py:attr:`~GroupAllSimilarChildren`
            - Run the GroupAllSimilarChildren action.
          * - :py:attr:`~GroupSimilarObjects`
            - Run the GroupSimilarObjects action.
          * - :py:attr:`~InitializeLifetimeService`
            - InitializeLifetimeService method.
          * - :py:attr:`~IsPropertyEditable`
            - IsPropertyEditable method.
          * - :py:attr:`~IsPropertyVisible`
            - IsPropertyVisible method.
          * - :py:attr:`~PromoteToNamedSelection`
            - Run the PromoteToNamedSelection action.
          * - :py:attr:`~PromoteToRemotePoint`
            - Run the PromoteToRemotePoint action.
          * - :py:attr:`~PropertyByAPIName`
            - Get a property by its API name.
          * - :py:attr:`~PropertyById`
            - PropertyById method.
          * - :py:attr:`~PropertyByName`
            - Get a property by its unique name.
          * - :py:attr:`~RemoveParameter`
            - Removes the parameter from the parameter set corresponding to the given property.
          * - :py:attr:`~SetActivateAtLoadStep`
            - SetActivateAtLoadStep method.
          * - :py:attr:`~SetComponentActivateAtLoadStep`
            - SetComponentActivateAtLoadStep method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~ApplyToRigidBodyPilotNode`
            - Gets or sets the ApplyToRigidBodyPilotNode.
          * - :py:attr:`~BeamMaterial`
            - Gets or sets the BeamMaterial.
          * - :py:attr:`~BeamRadius`
            - Gets or sets the BeamRadius.
          * - :py:attr:`~Behavior`
            - Gets or sets the Behavior.
          * - :py:attr:`~Children`
            - Gets the list of children.
          * - :py:attr:`~Comments`
            - Gets the list of associated comments.
          * - :py:attr:`~CoordinateSystem`
            - Gets or sets the CoordinateSystem.
          * - :py:attr:`~DataModelObjectCategory`
            - Gets the current DataModelObject's category.
          * - :py:attr:`~DefineBy`
            - Gets or sets the DefineBy.
          * - :py:attr:`~Direction`
            - Gets or sets the Direction.
          * - :py:attr:`~Figures`
            - Gets the list of associated figures.
          * - :py:attr:`~GroupingFolder`
            - GroupingFolder property.
          * - :py:attr:`~HarmonicIndex`
            - Gets or sets the HarmonicIndex.
          * - :py:attr:`~IconName`
            - IconName property.
          * - :py:attr:`~Images`
            - Gets the list of associated images.
          * - :py:attr:`~ImportableObjectSourceId`
            - ImportableObjectSourceId property.
          * - :py:attr:`~IndependentVariable`
            - Gets or sets the IndependentVariable.
          * - :py:attr:`~InternalObject`
            - Gets the internal object. For advanced usage only.
          * - :py:attr:`~LoadStepVarying`
            - Gets or sets the LoadStepVarying.
          * - :py:attr:`~LoadingApplicationType`
            - Gets or sets the LoadingApplicationType.
          * - :py:attr:`~Location`
            - Gets or sets the Geometry.
          * - :py:attr:`~Magnitude`
            - Gets the Magnitude.
          * - :py:attr:`~MagnitudeImag`
            - Gets the MagnitudeImag.
          * - :py:attr:`~Name`
            - Name property.
          * - :py:attr:`~NonCyclicLoadingType`
            - Gets or sets the NonCyclicLoadingType.
          * - :py:attr:`~NumberOfSegments`
            - Gets or sets the NumberOfSegments.
          * - :py:attr:`~ObjectId`
            - ObjectId property.
          * - :py:attr:`~ObjectState`
            - ObjectState property.
          * - :py:attr:`~ObjectTags`
            - ObjectTags property.
          * - :py:attr:`~Parent`
            - Parent property.
          * - :py:attr:`~PhaseAngle`
            - Gets the PhaseAngle.
          * - :py:attr:`~PinballRegion`
            - Gets or sets the PinballRegion.
          * - :py:attr:`~Properties`
            - Gets the list of properties for this object.
          * - :py:attr:`~ReadOnly`
            - Gets or sets the ReadOnly.
          * - :py:attr:`~RemotePoint`
            - Gets the remote point associated to the point mass.
          * - :py:attr:`~RpmSelection`
            - Gets or sets the RpmSelection.
          * - :py:attr:`~RpmVarying`
            - Gets or sets the RpmVarying.
          * - :py:attr:`~SectorNumber`
            - Gets or sets the SectorNumber.
          * - :py:attr:`~SharedRefBody`
            - Gets or sets the SharedRefBody.
          * - :py:attr:`~State`
            - State property.
          * - :py:attr:`~StepSelection`
            - Gets or sets the StepSelection.
          * - :py:attr:`~StepVarying`
            - Gets or sets the StepVarying.
          * - :py:attr:`~Suppressed`
            - Gets or sets the Suppressed.
          * - :py:attr:`~TransferableObjectId`
            - TransferableObjectId property.
          * - :py:attr:`~VisibleProperties`
            - Gets the list of properties that are visible for this object.
          * - :py:attr:`~XComponent`
            - Gets the XComponent.
          * - :py:attr:`~XComponentImag`
            - Gets the XComponentImag.
          * - :py:attr:`~XPhaseAngle`
            - Gets the XPhaseAngle.
          * - :py:attr:`~YComponent`
            - Gets the YComponent.
          * - :py:attr:`~YComponentImag`
            - Gets the YComponentImag.
          * - :py:attr:`~YPhaseAngle`
            - Gets the YPhaseAngle.
          * - :py:attr:`~ZComponent`
            - Gets the ZComponent.
          * - :py:attr:`~ZComponentImag`
            - Gets the ZComponentImag.
          * - :py:attr:`~ZPhaseAngle`
            - Gets the ZPhaseAngle.







Property detail
---------------
.. py:property:: ApplyToRigidBodyPilotNode
   :type: Optional[bool]


   
   Gets or sets the ApplyToRigidBodyPilotNode.
















   ..
       !! processed by numpydoc !!

.. py:property:: BeamMaterial
   :type: Optional[str]


   
   Gets or sets the BeamMaterial.
















   ..
       !! processed by numpydoc !!

.. py:property:: BeamRadius
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the BeamRadius.
















   ..
       !! processed by numpydoc !!

.. py:property:: Behavior
   :type: Optional[Ansys.Mechanical.DataModel.Enums.LoadBehavior]


   
   Gets or sets the Behavior.
















   ..
       !! processed by numpydoc !!

.. py:property:: Children
   :type: Optional[List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]]


   
   Gets the list of children.
















   ..
       !! processed by numpydoc !!

.. py:property:: Comments
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Comment]]


   
   Gets the list of associated comments.
















   ..
       !! processed by numpydoc !!

.. py:property:: CoordinateSystem
   :type: Optional[Ansys.ACT.Automation.Mechanical.CoordinateSystem]


   
   Gets or sets the CoordinateSystem.
















   ..
       !! processed by numpydoc !!

.. py:property:: DataModelObjectCategory
   :type: Optional[Ansys.Mechanical.DataModel.Enums.DataModelObjectCategory]


   
   Gets the current DataModelObject's category.
















   ..
       !! processed by numpydoc !!

.. py:property:: DefineBy
   :type: Optional[Ansys.Mechanical.DataModel.Enums.LoadDefineBy]


   
   Gets or sets the DefineBy.
















   ..
       !! processed by numpydoc !!

.. py:property:: Direction
   :type: Optional[Ansys.ACT.Math.Vector3D]


   
   Gets or sets the Direction.
















   ..
       !! processed by numpydoc !!

.. py:property:: Figures
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Figure]]


   
   Gets the list of associated figures.
















   ..
       !! processed by numpydoc !!

.. py:property:: GroupingFolder
   :type: Optional[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]


   
   GroupingFolder property.
















   ..
       !! processed by numpydoc !!

.. py:property:: HarmonicIndex
   :type: Optional[Ansys.ACT.Mechanical.Fields.Field]


   
   Gets or sets the HarmonicIndex.
















   ..
       !! processed by numpydoc !!

.. py:property:: IconName
   :type: Optional[str]


   
   IconName property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Images
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Image]]


   
   Gets the list of associated images.
















   ..
       !! processed by numpydoc !!

.. py:property:: ImportableObjectSourceId
   :type: Optional[str]


   
   ImportableObjectSourceId property.
















   ..
       !! processed by numpydoc !!

.. py:property:: IndependentVariable
   :type: Optional[Ansys.Mechanical.DataModel.Enums.LoadVariableVariationType]


   
   Gets or sets the IndependentVariable.
















   ..
       !! processed by numpydoc !!

.. py:property:: InternalObject
   :type: Optional[Ansys.Common.Interop.DSObjectsAuto.IDSLoadAuto]


   
   Gets the internal object. For advanced usage only.
















   ..
       !! processed by numpydoc !!

.. py:property:: LoadStepVarying
   :type: Optional[bool]


   
   Gets or sets the LoadStepVarying.
















   ..
       !! processed by numpydoc !!

.. py:property:: LoadingApplicationType
   :type: Optional[Ansys.Mechanical.DataModel.Enums.LoadingApplicationType]


   
   Gets or sets the LoadingApplicationType.
















   ..
       !! processed by numpydoc !!

.. py:property:: Location
   :type: Optional[Ansys.ACT.Interfaces.Common.ISelectionInfo]


   
   Gets or sets the Geometry.
















   ..
       !! processed by numpydoc !!

.. py:property:: Magnitude
   :type: Optional[Ansys.ACT.Mechanical.Fields.Field]


   
   Gets the Magnitude.
















   ..
       !! processed by numpydoc !!

.. py:property:: MagnitudeImag
   :type: Optional[Ansys.ACT.Mechanical.Fields.Field]


   
   Gets the MagnitudeImag.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]


   
   Name property.
















   ..
       !! processed by numpydoc !!

.. py:property:: NonCyclicLoadingType
   :type: Optional[Ansys.Mechanical.DataModel.Enums.NonCyclicLoadingType]


   
   Gets or sets the NonCyclicLoadingType.
















   ..
       !! processed by numpydoc !!

.. py:property:: NumberOfSegments
   :type: Optional[int]


   
   Gets or sets the NumberOfSegments.
















   ..
       !! processed by numpydoc !!

.. py:property:: ObjectId
   :type: Optional[int]


   
   ObjectId property.
















   ..
       !! processed by numpydoc !!

.. py:property:: ObjectState
   :type: Optional[Ansys.Mechanical.DataModel.Enums.ObjectState]


   
   ObjectState property.
















   ..
       !! processed by numpydoc !!

.. py:property:: ObjectTags
   :type: Optional[Iterable[Ansys.Mechanical.DataModel.Interfaces.IObjectTag]]


   
   ObjectTags property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Parent
   :type: Optional[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]


   
   Parent property.
















   ..
       !! processed by numpydoc !!

.. py:property:: PhaseAngle
   :type: Optional[Ansys.ACT.Mechanical.Fields.Field]


   
   Gets the PhaseAngle.
















   ..
       !! processed by numpydoc !!

.. py:property:: PinballRegion
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the PinballRegion.
















   ..
       !! processed by numpydoc !!

.. py:property:: Properties
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.Property]]


   
   Gets the list of properties for this object.
















   ..
       !! processed by numpydoc !!

.. py:property:: ReadOnly
   :type: Optional[bool]


   
   Gets or sets the ReadOnly.
















   ..
       !! processed by numpydoc !!

.. py:property:: RemotePoint
   :type: Optional[Ansys.ACT.Automation.Mechanical.RemotePoint]


   
   Gets the remote point associated to the point mass.
















   ..
       !! processed by numpydoc !!

.. py:property:: RpmSelection
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the RpmSelection.
















   ..
       !! processed by numpydoc !!

.. py:property:: RpmVarying
   :type: Optional[bool]


   
   Gets or sets the RpmVarying.
















   ..
       !! processed by numpydoc !!

.. py:property:: SectorNumber
   :type: Optional[Ansys.ACT.Mechanical.Fields.Field]


   
   Gets or sets the SectorNumber.
















   ..
       !! processed by numpydoc !!

.. py:property:: SharedRefBody
   :type: Optional[Ansys.ACT.Automation.Mechanical.Body]


   
   Gets or sets the SharedRefBody.
















   ..
       !! processed by numpydoc !!

.. py:property:: State
   :type: Optional[Ansys.Mechanical.DataModel.Enums.Legacy.State]


   
   State property.
















   ..
       !! processed by numpydoc !!

.. py:property:: StepSelection
   :type: Optional[int]


   
   Gets or sets the StepSelection.
















   ..
       !! processed by numpydoc !!

.. py:property:: StepVarying
   :type: Optional[Ansys.Mechanical.DataModel.Enums.StepVarying]


   
   Gets or sets the StepVarying.
















   ..
       !! processed by numpydoc !!

.. py:property:: Suppressed
   :type: Optional[bool]


   
   Gets or sets the Suppressed.
















   ..
       !! processed by numpydoc !!

.. py:property:: TransferableObjectId
   :type: Optional[str]


   
   TransferableObjectId property.
















   ..
       !! processed by numpydoc !!

.. py:property:: VisibleProperties
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.Property]]


   
   Gets the list of properties that are visible for this object.
















   ..
       !! processed by numpydoc !!

.. py:property:: XComponent
   :type: Optional[Ansys.ACT.Mechanical.Fields.Field]


   
   Gets the XComponent.
















   ..
       !! processed by numpydoc !!

.. py:property:: XComponentImag
   :type: Optional[Ansys.ACT.Mechanical.Fields.Field]


   
   Gets the XComponentImag.
















   ..
       !! processed by numpydoc !!

.. py:property:: XPhaseAngle
   :type: Optional[Ansys.ACT.Mechanical.Fields.Field]


   
   Gets the XPhaseAngle.
















   ..
       !! processed by numpydoc !!

.. py:property:: YComponent
   :type: Optional[Ansys.ACT.Mechanical.Fields.Field]


   
   Gets the YComponent.
















   ..
       !! processed by numpydoc !!

.. py:property:: YComponentImag
   :type: Optional[Ansys.ACT.Mechanical.Fields.Field]


   
   Gets the YComponentImag.
















   ..
       !! processed by numpydoc !!

.. py:property:: YPhaseAngle
   :type: Optional[Ansys.ACT.Mechanical.Fields.Field]


   
   Gets the YPhaseAngle.
















   ..
       !! processed by numpydoc !!

.. py:property:: ZComponent
   :type: Optional[Ansys.ACT.Mechanical.Fields.Field]


   
   Gets the ZComponent.
















   ..
       !! processed by numpydoc !!

.. py:property:: ZComponentImag
   :type: Optional[Ansys.ACT.Mechanical.Fields.Field]


   
   Gets the ZComponentImag.
















   ..
       !! processed by numpydoc !!

.. py:property:: ZPhaseAngle
   :type: Optional[Ansys.ACT.Mechanical.Fields.Field]


   
   Gets the ZPhaseAngle.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Activate() -> None

   
   Activate the current object.

   ..
       !! processed by numpydoc !!

.. py:method:: AddComment() -> Ansys.ACT.Automation.Mechanical.Comment

   
   Creates a new child Comment.

   ..
       !! processed by numpydoc !!

.. py:method:: AddFigure() -> Ansys.ACT.Automation.Mechanical.Figure

   
   Creates a new child Figure.

   ..
       !! processed by numpydoc !!

.. py:method:: AddImage(filePath: str) -> Ansys.ACT.Automation.Mechanical.Image

.. code-block:: text

   Creates a new child Image.
   If a filePath is provided, the image will be loaded from that file,
   if not, the image will be a screen capture of the Geometry window.

..
       !! processed by numpydoc !!

.. py:method:: CopyTo(other: Ansys.ACT.Automation.Mechanical.DataModelObject) -> None

   
   Copies all visible properties from this object to another.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateObjRef(requestedType: type) -> System.Runtime.Remoting.ObjRef

   
   CreateObjRef method.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateParameter(propName: str) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Creates a new parameter for a Property.

   ..
       !! processed by numpydoc !!

.. py:method:: Delete() -> None

   
   Run the Delete action.

   ..
       !! processed by numpydoc !!

.. py:method:: Duplicate() -> Ansys.Mechanical.DataModel.Interfaces.IDataModelObject

   
   Creates a copy of the current DataModelObject.

   ..
       !! processed by numpydoc !!

.. py:method:: Equals(other: Ansys.Mechanical.DataModel.Interfaces.IDataModelObject) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetAPIName(dispId: int) -> str

   
   Property name bound to dispId.

   ..
       !! processed by numpydoc !!

.. py:method:: GetActivateAtLoadStep(stepNumber: int) -> bool

   
   GetActivateAtLoadStep method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetAllProperties() -> List[Ansys.ACT.Automation.Mechanical.AutomationPropertyWrapper]

   
   GetAllProperties method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetChildren(recurses: bool, children: List[ChildrenType]) -> List[ChildrenType]
               GetChildren(category: Ansys.Mechanical.DataModel.Enums.DataModelObjectCategory, recurses: bool, children: List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]) -> List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]

   
   Gets the list of children, filtered by type.

   ..
       !! processed by numpydoc !!

.. py:method:: GetComponentActivateAtLoadStep(component: str, stepNumber: int) -> bool

   
   GetComponentActivateAtLoadStep method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetEnumName(enumType: type, value: int, dispId: int) -> str

   
   Enum name bound to value

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetIconFile() -> System.Byte

   
   GetIconFile method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetLifetimeService() -> Any

   
   GetLifetimeService method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetObjectData(info: System.Runtime.Serialization.SerializationInfo, context: System.Runtime.Serialization.StreamingContext) -> None

   
   GetObjectData method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetParameter(propName: str) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Gets the parameter corresponding to the given property.

   ..
       !! processed by numpydoc !!

.. py:method:: GetPath() -> str

   
   GetPath method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetPropertyName(dispId: int) -> str

   
   GetPropertyName method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetPropertyValue(name: str) -> Any

   
   GetPropertyValue method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetVisibleProperties() -> List[System.Reflection.PropertyInfo]

   
   GetVisibleProperties method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetVisiblePropertyNames() -> List[str]

   
   GetVisiblePropertyNames method.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupAllSimilarChildren() -> None

   
   Run the GroupAllSimilarChildren action.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupSimilarObjects() -> Ansys.ACT.Automation.Mechanical.TreeGroupingFolder

   
   Run the GroupSimilarObjects action.

   ..
       !! processed by numpydoc !!

.. py:method:: InitializeLifetimeService() -> Any

   
   InitializeLifetimeService method.

   ..
       !! processed by numpydoc !!

.. py:method:: IsPropertyEditable(dispId: int) -> bool
               IsPropertyEditable(propName: str) -> bool

   
   IsPropertyEditable method.

   ..
       !! processed by numpydoc !!

.. py:method:: IsPropertyVisible(dispId: int) -> bool
               IsPropertyVisible(propName: str) -> bool

   
   IsPropertyVisible method.

   ..
       !! processed by numpydoc !!

.. py:method:: PromoteToNamedSelection() -> Iterable[Ansys.ACT.Automation.Mechanical.NamedSelection]

   
   Run the PromoteToNamedSelection action.

   ..
       !! processed by numpydoc !!

.. py:method:: PromoteToRemotePoint() -> Iterable[Ansys.ACT.Automation.Mechanical.RemotePoint]

   
   Run the PromoteToRemotePoint action.

   ..
       !! processed by numpydoc !!

.. py:method:: PropertyByAPIName(name: str) -> Ansys.ACT.Automation.Mechanical.Property

.. code-block:: text

   Get a property by its API name.
   If multiple properties have the same API Name, only the first property with that name will be returned.

..
       !! processed by numpydoc !!

.. py:method:: PropertyById(dispId: int) -> Ansys.ACT.Automation.Mechanical.Property

   
   PropertyById method.

   ..
       !! processed by numpydoc !!

.. py:method:: PropertyByName(name: str) -> Ansys.ACT.Automation.Mechanical.Property

   
   Get a property by its unique name.

   ..
       !! processed by numpydoc !!

.. py:method:: RemoveParameter(propName: str) -> None

   
   Removes the parameter from the parameter set corresponding to the given property.

   ..
       !! processed by numpydoc !!

.. py:method:: SetActivateAtLoadStep(stepNumber: int, bActive: bool) -> None

   
   SetActivateAtLoadStep method.

   ..
       !! processed by numpydoc !!

.. py:method:: SetComponentActivateAtLoadStep(component: str, stepNumber: int, bActive: bool) -> None

   
   SetComponentActivateAtLoadStep method.

   ..
       !! processed by numpydoc !!



.. vale on